--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+::-webkit-scrollbar{
+    width: 25px;
+}
+
+::-webkit-scrollbar-track{
+    background-color: #083061;
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: #2bb4e6;
+    border-radius: 10px;
+}
